<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".initial">

    <Button
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="260dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="750dp"
        android:background="@drawable/main_screen_button"
        android:fontFamily="@font/s"
        android:text="@string/about_us"
        android:textColor="#ccba8a"
        android:textSize="12sp"
        tools:text="About us" />

    <Button
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="365dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="750dp"
        android:background="@drawable/main_screen_button"
        android:fontFamily="@font/s"
        android:text="@string/contact_us"
        android:textColor="#ccba8a"
        android:textSize="12sp"
        tools:text="Contact @string/contact_us" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="329dp"
        android:fontFamily="@font/light"
        android:text="@string/caption"
        android:textAlignment="center"
        android:textColor="#ccba8a"
        android:textSize="14sp"
        android:textStyle=""
        tools:text="Find a lawyer at your finger tips!" />


    <Button
        android:id="@+id/customer"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:text="@string/customer"
        android:textColor="#3C4043"
        android:textSize="18sp" />

    <Button
        android:id="@id/lawyer"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:text="@string/lawyer"
        android:textColor="#3C4043"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="224dp"
        android:contentDescription="@string/main_jurist"
        app:srcCompat="@drawable/main_jurist" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="248dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="510dp"
        android:contentDescription="@string/main_icon"
        app:srcCompat="@drawable/ic_school_24px" />

</RelativeLayout>



