<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C4043"
    tools:context=".loginCustomer">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="606dp"
        android:fontFamily="@font/bold"
        android:text="@string/customer_login"
        android:textAlignment="center"
        android:textColor="#ccba8a"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/jurist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="574dp"
        android:contentDescription="@string/jurist"
        app:srcCompat="@drawable/jurist" />


    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="495dp"
        android:autofillHints=""
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/ic_person_24px"
        android:drawablePadding="5dp"
        android:fontFamily="@font/light"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColorHint="#ccba8a"
        android:textColor="#ccba8a"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="435dp"
        android:background="@drawable/edit_text"
        android:drawableStart="@drawable/ic_vpn_key_24px"
        android:drawablePadding="5dp"
        android:fontFamily="@font/light"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColorHint="#ccba8a"
        android:textColor="#ccba8a"
        android:textSize="12sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:text="@string/login_button"
        android:textColor="#3C4043" />

    <Button
        android:id="@+id/login_cancel"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:text="@string/login_cancel"
        android:textColor="#3C4043" />

    <TextView
        android:id="@+id/below_signup"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="697dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/light"
        android:text="@string/below_signup"
        android:textAlignment="center"
        android:textColor="#ccba8a"
        android:textSize="12sp"
        android:textStyle=""
        tools:text="Do not have an account? Sign Up." />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="81dp"
        android:layout_marginTop="599dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="97dp"
        android:fontFamily="@font/light"
        android:text="@string/Forgot_password"
        android:textAlignment="center"
        android:textColor="#ccba8a"
        android:textSize="12sp"
        android:textStyle=""
        tools:text="Forgot Password?" />

    <ImageView
        android:id="@+id/cirle"
        android:layout_width="152dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="565dp"
        android:contentDescription="@string/circle"
        app:srcCompat="@drawable/circle" />

</RelativeLayout>