<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimaryDark"
tools:context=".ScheduleActivity" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lawyer_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginTop="20dp"
        android:text="@string/events"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/DATE"
        android:inputType="datetime"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:onClick="Send"
        android:text="@string/create_button"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/button"
        android:fontFamily="@font/bold"
        android:text="@string/view_events"
        android:textColor="@color/colorPrimaryDark" />







</LinearLayout>
</android.support.constraint.ConstraintLayout>