<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/colorAccent"
    android:background="@color/colorPrimaryDark"
    tools:context=".updateProfile">


    <LinearLayout
        android:layout_width="498dp"
        android:layout_height="653dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="356dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/bold"
            android:text="@string/update_profile"
            android:textAlignment="center"
            android:textColor="#ccba8a"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/profFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/light"
            android:hint="@string/first_name_update"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/profLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/light"
            android:hint="@string/last_name_update"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/profPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/light"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent" />

        <TextView
            android:id="@+id/profEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/light"
            android:hint="@string/email_new"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent" />


        <TextView
            android:id="@+id/profRef"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/light"
            android:hint="@string/reference_number"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent" />


        <Button
            android:id="@+id/updateProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="130dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button"
            android:fontFamily="@font/bold"
            android:text="@string/update"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>